Fix read more contrast

--- a/lesson11/css/towns/small.css
+++ b/lesson11/css/towns/small.css
@@ -328,3 +328,7 @@ li img {
     margin:0;
     padding:0;
 }
+
+a {
+    color: #31003C;
+}
